Fix double scrollbars

--- a/daladevelop/assets/css/main.css
+++ b/daladevelop/assets/css/main.css
@@ -4,7 +4,7 @@
  */
 :root {
   -ms-overflow-style: -ms-autohiding-scrollbar;
-  overflow-y: scroll;
+  overflow: hidden;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
           text-size-adjust: 100%; }
